// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paddingBottom renders 0 1`] = `
Array [
  .c0 {
  padding-bottom: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBottom renders function 1`] = `
Array [
  .c0 {
  padding-bottom: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: has;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: has;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBottom renders invalid theme path 1`] = `
Array [
  .c0 {
  padding-bottom: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBottom renders negative number 1`] = `
Array [
  .c0 {
  padding-bottom: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBottom renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    padding-bottom: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-bottom: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-bottom: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-bottom: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    padding-bottom: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-bottom: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-bottom: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-bottom: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-bottom: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-bottom: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-bottom: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-bottom: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-bottom: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-bottom: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-bottom: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-bottom: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBottom renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    padding-bottom: July;
  }
}

@media April {
  .c0 {
    padding-bottom: August;
  }
}

@media January {
  .c0 {
    padding-bottom: September;
  }
}

@media April {
  .c0 {
    padding-bottom: November;
  }
}

@media June {
  .c0 {
    padding-bottom: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    padding-bottom: July;
  }
}

@media April {
  .c0 {
    padding-bottom: August;
  }
}

@media January {
  .c0 {
    padding-bottom: September;
  }
}

@media April {
  .c0 {
    padding-bottom: November;
  }
}

@media June {
  .c0 {
    padding-bottom: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-bottom: January;
  }
}

@media April {
  .c0 {
    padding-bottom: December;
  }
}

@media January {
  .c0 {
    padding-bottom: April;
  }
}

@media April {
  .c0 {
    padding-bottom: May;
  }
}

@media June {
  .c0 {
    padding-bottom: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-bottom: January;
  }
}

@media April {
  .c0 {
    padding-bottom: December;
  }
}

@media January {
  .c0 {
    padding-bottom: April;
  }
}

@media April {
  .c0 {
    padding-bottom: May;
  }
}

@media June {
  .c0 {
    padding-bottom: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBottom renders postitive number 1`] = `
Array [
  .c0 {
  padding-bottom: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBottom renders string 1`] = `
Array [
  .c0 {
  padding-bottom: July;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: July;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: June;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: June;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBottom renders valid theme path 1`] = `
Array [
  .c0 {
  padding-bottom: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-bottom: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
